<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fadingBlue"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/expenseEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin"
                android:background="@color/transparent"
                android:hint="@string/amount_hint"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:nextFocusDown="@+id/tagsEditText" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkBlue" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/fadingBlue"
        android:orientation="vertical">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/tagsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/tagsEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_margin"
                android:layout_marginStart="@dimen/activity_margin"
                android:layout_marginTop="@dimen/activity_margin"
                android:background="@color/transparent"
                android:hint="@string/add_expense_tag_hint"
                android:imeOptions="actionUnspecified"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/nameExplanation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/content_padding"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin"
            android:layout_marginTop="@dimen/small_padding"
            android:text="@string/add_expense_tag_explanation" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/darkBlue" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/xlarge_padding"
        android:layout_gravity="bottom"
        android:text="@string/action_save" />

</LinearLayout>